--- a/helpdesk_aliciagarzo/views/helpdesk_view.xml
+++ b/helpdesk_aliciagarzo/views/helpdesk_view.xml
@@ -5,8 +5,15 @@
             <field name = "name">view.helpdesk.ticket.form</field>
             <field name = "model">helpdesk.ticket</field>
             <field name = "arch" type = "xml">
+
             <form string='Ticket'>
                 <header>
+                <button string= 'Asignar' name='asignar' type='object' states="nuevo"/>
+                <button string= 'En proceso' name='proceso' type='object' states="asignado"/>
+                <button string= 'Finalizar' name='finalizar' type='object' states="nuevo,asignado,pendiente,proceso"/>
+                <button string= 'Cancelar' name='asignar' type='object' states="cancelado"/>
+
+
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
@@ -20,24 +27,32 @@
                     <group>
                         <field name="date"/>
                         <field name="date_limit"/>
-
                     </group>
-
                      <group>
+                        <field name="user_id"/>
                         <field name="assigned"/>
-                        <field name="time"/>
-
+                        <field name="ticket_qty"/>
+                        <field name="time" widget="float_time"/>
                     </group>
                 </group>
                 <notebook>
-                    <page string = "Description">
-                        <field name= "description"/>
+                    <page string="Description">
+                        <field name="description"/>
+                        <group>
+                            <field name='tag_name'/>
+                            <button string="Create tag"
+                            name="create_tag"
+                            type="object"/>
+                        </group>
+                        <field name="tag_ids"/>
+                    </page>
+                     <page string = "Actions">
+                        <field name= "action_ids"/>
                     </page>
                     <page string = "Quality">
-                        <group>
-                             <field name= "action_corrective"/>
-                        </group>
-                        <group>
+                        <label for= "action_corrective"/>
+                        <field name= "action_corrective"/>
+                        <group string="Preventive Action">
                              <field name= "action_preventive" nolabel="1"/>
                         </group>
                     </page>
@@ -47,5 +62,94 @@
             </form>
             </field>
         </record>
+
+        <record id="view_helpdesk_ticket_search" model="ir.ui.view">
+            <field name = "name">view.helpdesk_ticket.search</field>
+            <field name = "model">helpdesk.ticket</field>
+            <field name = "arch" type= "xml">
+            
+                <search string="Ticket">
+                    <!-- Filtrar por nombre y por usuario asignado -->
+                    <field name = "name"/>
+                    <field name = "user_id"/>
+                    <!-- FIltrar tickets asignados -->
+                    <filter string = 'Assigned' name="assigned_to" domain="[('user_id', '!=', False)]"/>
+                    <!-- Filtrar tickets sin date limit -->
+                    <filter string = 'Not date limit' name="date_limit" domain="[('date_limit', '!=', False)]"/>  
+                    <!-- Agrupar por date_limit -->          
+                    <filter string = 'Date limit' name="date_limit" context="{'group_by':'date_limit'}"/>
+                    <!-- Agrupar por usuario asignado -->
+                    <filter string = 'Assigned to' name="user_id" context="{'group_by':'user_id'}"/>
+                </search>
+            </field>
+        </record>
+
+
+        
+        <record id="view_helpdesk_ticket_pivot" model="ir.ui.view">
+            <field name = "name">view.helpdesk_ticket.pivot</field>
+            <field name = "model">helpdesk.ticket</field>
+            <field name = "arch" type= "xml">
+
+                <pivot string="Ticket">
+                    <field name="user_id" type="row"/>
+                    <field name="date" interval="month" type="col"/>
+                    <field name="time" type="measure" widget="float_time"/>
+                </pivot>
+            </field>
+        </record>
+
+
+        <record id="view_helpdesk_ticket_graph" model="ir.ui.view">
+            <field name = "name">view.helpdesk_ticket.graph</field>
+            <field name = "model">helpdesk.ticket</field>
+            <field name = "arch" type= "xml">
+
+                <graph string="Ticket">
+                    <field name="user_id" type="row"/>
+                    <field name="time" type="measure" widget="float_time"/>
+                </graph>
+        </field>
+        </record>
+
+
+        <record id="view_helpdesk_ticket_calendar" model="ir.ui.view">
+            <field name = "name">view.helpdesk_ticket.calendar</field>
+            <field name = "model">helpdesk.ticket</field>
+            <field name = "arch" type= "xml">
+                <calendar string="Tickets" date_start ="date" color="user_id" hide_time="true" event_limit ="5">
+                    <field name="user_id" avatar_field ="image_128" />
+                    <field name="name" />
+                    <field name="user_id" filters="1" invisible="1"/>
+                </calendar>
+            </field>
+        </record>
+
+        <record id="view_helpdesk_ticket_kanban" model="ir.ui.view">
+            <field name = "name">view.helpdesk_ticket.kanban</field>
+            <field name = "model">helpdesk.ticket</field>
+            <field name = "arch" type="xml">
+                <kanban default_group_by="user_id">
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="o_kanban_record_content oe_kanban_global_click">
+                                <div class="o_kanban_record_title">
+                                    <strong><field name="name"/></strong>
+                                </div>
+                                <div class="o_kanban_record_subtitle">
+                                    <field name="date"/>
+                                    <field name="time"/>
+                                </div>
+                                 <div class="o_kanban_record_bottom">
+                                   <div class="oe_kanban_bottom_right">
+                                        <field name="user_id" widget="many2one_avatar_user"/>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
 
 </odoo>
